# TM_oop_lab12

./: README.md  create_connection.py  database.db  mydatabase.db  pyproject.toml  recipes.db
examples/: create_connection.py  create_table.py  datetime_example.py  executemany.py  full_application.py  insert_data.py  select_data.py  update_data.py
tasks/task1/: recipe_repository.py  task_1.py
tasks/task2/: db.py  recipe_repository.py  task_2.py
tests/: test_task1.py  test_task2(1).py
